WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13683
REGRESSION: Load never completes for nonexistent unqualified domain names
https://bugs.webkit.org/show_bug.cgi?id=13683
Summary
REGRESSION: Load never completes for nonexistent unqualified domain names
Rachael Worthington (cheers)
Reported
2007-05-11 15:39:57 PDT
Steps to Reproduce: 1. launch the latest nightly. 2. attempt to load a URL that doesn't exist (I usually just keymash for 10 or so characters) 3. observe that the address bar enters the loading state and starts filling in then stops, and that the spinny activity circle keeps spinning indefinitely. No page is ever loaded. From IRC: pewtermoose: clicking a link to download something keeps the address bar in a loading state too
Attachments
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2007-05-11 15:46:52 PDT
Definitely introduced in the last nightly, or no? Also, what is "the last nightly"? time changes, you know ;)
Rachael Worthington (cheers)
Comment 2
2007-05-11 16:07:35 PDT
apologies, although between the timestamp you could probably have figured it out :P from what i can tell using the nightlies to test, the bug was introduced between 21322 and 21368 at which point, I got distracted.
Maciej Stachowiak
Comment 3
2007-05-12 01:14:37 PDT
Likely fallout from
r21367
.
Maciej Stachowiak
Comment 4
2007-05-12 01:20:20 PDT
It turns out that the key is unqualified domain names, not nonexistent pages. This shows the error page fine: nonexistent-domain-name.example.com But typing just "nonexistent-domain-name" fails.
Brady Eidson
Comment 5
2007-05-16 14:45:00 PDT
***
Bug 13750
has been marked as a duplicate of this bug. ***
Brady Eidson
Comment 6
2007-05-16 14:45:55 PDT
<
rdar://problem/5205162
>
Maciej Stachowiak
Comment 7
2007-05-16 16:51:24 PDT
<
rdar://problem/5205162
>
Matt Lilek
Comment 8
2007-05-16 22:03:09 PDT
(In reply to
comment #0
)
> From IRC: > pewtermoose: clicking a link to download something keeps the address bar in a > loading state too >
Bug 13694
Matt Lilek
Comment 9
2007-05-16 22:17:06 PDT
Fix landed by Maciej in
r21524
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug