WebCore/loader/FrameLoader.cpp
@@ -2245,7 +2245,6 @@ bool FrameLoader::frameHasLoaded() const
     return m_committedFirstRealDocumentLoad || isLoading() && !m_creatingInitialEmptyDocument; 
 }
 
-
 void FrameLoader::setDocumentLoader(DocumentLoader* loader)
 {
     if (!loader && !m_documentLoader)
@@ -4201,9 +4200,7 @@ void FrameLoader::mainReceivedCompleteError(DocumentLoader* loader, const Resour
     loader->setPrimaryLoadComplete(true);
     m_client->dispatchDidLoadMainResource(activeDocumentLoader());
     checkCompleted();
-#if PLATFORM(QT)
     checkLoadComplete();
-#endif
 }
 
 void FrameLoader::mainReceivedError(const ResourceError& error, bool isComplete)
